--- a/Xylophone/Base.lproj/LaunchScreen.storyboard
+++ b/Xylophone/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F2073" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lz0-ti-adX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,7 +27,76 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-100" y="375"/>
+        </scene>
+        <!--Three Keys View Controller-->
+        <scene sceneID="r0E-76-ivH">
+            <objects>
+                <viewController id="lz0-ti-adX" userLabel="Three Keys View Controller" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9NB-T9-a0e">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lgE-RF-EcT" userLabel="Rail 2">
+                                <rect key="frame" x="225" y="162" width="54" height="352"/>
+                                <color key="backgroundColor" red="0.015686274510000001" green="0.87058823529999996" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="352" id="D6q-U1-Ayt"/>
+                                    <constraint firstAttribute="width" constant="54" id="VSm-yP-L1z"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R4v-CN-8OK" userLabel="Rail 1">
+                                <rect key="frame" x="96" y="162" width="54" height="352"/>
+                                <color key="backgroundColor" red="0.015686274510000001" green="0.87058823529999996" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="352" id="hEf-zK-ebx"/>
+                                    <constraint firstAttribute="width" constant="54" id="qaY-2K-RTz"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YHf-bH-he9" userLabel="Key1">
+                                <rect key="frame" x="27" y="181" width="321" height="86"/>
+                                <color key="backgroundColor" red="1" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="321" id="WTh-DI-z3r"/>
+                                    <constraint firstAttribute="height" constant="86" id="jdv-5f-e0J"/>
+                                </constraints>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ek0-UT-uDe" userLabel="Key2">
+                                <rect key="frame" x="42" y="291" width="291" height="86"/>
+                                <color key="backgroundColor" red="0.72916666669999997" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="291" id="8H3-Xq-8Oi"/>
+                                </constraints>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6S-kC-e7y" userLabel="Key3">
+                                <rect key="frame" x="61" y="401" width="253" height="86"/>
+                                <color key="backgroundColor" red="0.46527777780000001" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="253" id="oRl-Am-yMW"/>
+                                </constraints>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lgE-RF-EcT" firstAttribute="top" secondItem="9NB-T9-a0e" secondAttribute="top" constant="162" id="32a-Gc-Loz"/>
+                            <constraint firstItem="D6S-kC-e7y" firstAttribute="top" secondItem="Ek0-UT-uDe" secondAttribute="bottom" constant="24" id="35c-S1-DdA"/>
+                            <constraint firstItem="Ek0-UT-uDe" firstAttribute="centerX" secondItem="YHf-bH-he9" secondAttribute="centerX" id="5Ky-cr-k5h"/>
+                            <constraint firstItem="D6S-kC-e7y" firstAttribute="height" secondItem="YHf-bH-he9" secondAttribute="height" id="915-7F-5Gw"/>
+                            <constraint firstItem="D6S-kC-e7y" firstAttribute="centerX" secondItem="YHf-bH-he9" secondAttribute="centerX" id="Bsb-9I-sPC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lgE-RF-EcT" secondAttribute="trailing" constant="80" id="EdE-CF-1Qe"/>
+                            <constraint firstItem="YHf-bH-he9" firstAttribute="centerX" secondItem="9NB-T9-a0e" secondAttribute="centerX" id="QMc-iS-b77"/>
+                            <constraint firstItem="R4v-CN-8OK" firstAttribute="leading" secondItem="9NB-T9-a0e" secondAttribute="leadingMargin" constant="80" id="Sai-L6-iRH"/>
+                            <constraint firstItem="Ek0-UT-uDe" firstAttribute="height" secondItem="YHf-bH-he9" secondAttribute="height" id="Ym0-uc-eAI"/>
+                            <constraint firstItem="Ek0-UT-uDe" firstAttribute="top" secondItem="YHf-bH-he9" secondAttribute="bottom" constant="24" id="lqI-ac-tUr"/>
+                            <constraint firstItem="R4v-CN-8OK" firstAttribute="top" secondItem="9NB-T9-a0e" secondAttribute="top" constant="162" id="nzT-WP-eTk"/>
+                            <constraint firstItem="YHf-bH-he9" firstAttribute="top" secondItem="9NB-T9-a0e" secondAttribute="top" constant="181" id="rwf-zG-H1R"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ROU-6B-oAv"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8fi-Be-B6L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="718" y="366"/>
         </scene>
     </scenes>
 </document>
