--- a/Xylophone/Base.lproj/Main.storyboard
+++ b/Xylophone/Base.lproj/Main.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F2073" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -107,6 +109,75 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="162" y="366"/>
+        </scene>
+        <!--Three Keys View Controller-->
+        <scene sceneID="tUn-2v-ijV">
+            <objects>
+                <viewController id="nhX-MB-CVy" userLabel="Three Keys View Controller" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UBc-1x-ICR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uUP-en-Ffh" userLabel="Rail 2">
+                                <rect key="frame" x="225" y="162" width="54" height="352"/>
+                                <color key="backgroundColor" red="0.015686274510000001" green="0.87058823529999996" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="352" id="7lf-db-Jfg"/>
+                                    <constraint firstAttribute="width" constant="54" id="hW4-60-fkG"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ios-Kn-HAF" userLabel="Rail 1">
+                                <rect key="frame" x="96" y="162" width="54" height="352"/>
+                                <color key="backgroundColor" red="0.015686274510000001" green="0.87058823529999996" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="352" id="8Mt-Mh-eUy"/>
+                                    <constraint firstAttribute="width" constant="54" id="dWS-J3-9y4"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YhV-MN-PbT" userLabel="Key1">
+                                <rect key="frame" x="27" y="181" width="321" height="86"/>
+                                <color key="backgroundColor" red="1" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="86" id="dgc-p8-LqE"/>
+                                    <constraint firstAttribute="width" constant="321" id="uSl-1a-Mhu"/>
+                                </constraints>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6bI-5J-xVJ" userLabel="Key2">
+                                <rect key="frame" x="42" y="291" width="291" height="86"/>
+                                <color key="backgroundColor" red="0.72916666669999997" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="291" id="Avu-YM-F2S"/>
+                                </constraints>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kcf-8W-2IX" userLabel="Key3">
+                                <rect key="frame" x="61" y="401" width="253" height="86"/>
+                                <color key="backgroundColor" red="0.46527777780000001" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="253" id="DrR-h5-VNF"/>
+                                </constraints>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6bI-5J-xVJ" firstAttribute="centerX" secondItem="YhV-MN-PbT" secondAttribute="centerX" id="AE3-CG-iJ1"/>
+                            <constraint firstItem="6bI-5J-xVJ" firstAttribute="top" secondItem="YhV-MN-PbT" secondAttribute="bottom" constant="24" id="Ilr-Oi-3pp"/>
+                            <constraint firstItem="YhV-MN-PbT" firstAttribute="centerX" secondItem="UBc-1x-ICR" secondAttribute="centerX" id="Khs-S1-pgz"/>
+                            <constraint firstItem="ios-Kn-HAF" firstAttribute="leading" secondItem="UBc-1x-ICR" secondAttribute="leadingMargin" constant="80" id="Ved-Q4-V0y"/>
+                            <constraint firstItem="uUP-en-Ffh" firstAttribute="top" secondItem="UBc-1x-ICR" secondAttribute="top" constant="162" id="a6u-2V-yO9"/>
+                            <constraint firstItem="Kcf-8W-2IX" firstAttribute="top" secondItem="6bI-5J-xVJ" secondAttribute="bottom" constant="24" id="bsU-Q7-92r"/>
+                            <constraint firstItem="Kcf-8W-2IX" firstAttribute="centerX" secondItem="YhV-MN-PbT" secondAttribute="centerX" id="c6r-ms-yn5"/>
+                            <constraint firstItem="6bI-5J-xVJ" firstAttribute="height" secondItem="YhV-MN-PbT" secondAttribute="height" id="dNp-vA-ULv"/>
+                            <constraint firstItem="Kcf-8W-2IX" firstAttribute="height" secondItem="YhV-MN-PbT" secondAttribute="height" id="fyi-8E-DrG"/>
+                            <constraint firstItem="ios-Kn-HAF" firstAttribute="top" secondItem="UBc-1x-ICR" secondAttribute="top" constant="162" id="hpL-tA-Du1"/>
+                            <constraint firstItem="YhV-MN-PbT" firstAttribute="top" secondItem="UBc-1x-ICR" secondAttribute="top" constant="181" id="iGY-hV-Zs1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uUP-en-Ffh" secondAttribute="trailing" constant="80" id="z2t-cc-RHa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="jjC-eF-Er8"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y6w-04-hRI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="718" y="366"/>
         </scene>
     </scenes>
 </document>
